Fix navigation spacing

--- a/src/components/navigation/navigation.less
+++ b/src/components/navigation/navigation.less
@@ -107,7 +107,7 @@
 	position: fixed;
 	width: 100%;
 	z-index: 99;
-	top: 5.1rem;
+	top: 5.6rem;
 	color: @dark-gray;
 	box-shadow: 0 .3rem .5rem 0 rgba(0, 0, 0, 0.18);
 	min-width: 1024px;
